--- a/src/includes/specbox.ejs
+++ b/src/includes/specbox.ejs
@@ -1,5 +1,5 @@
 
-    <div class="c-specbox">
+    <div class="c-specbox js-specbox">
         <div class="c-specbox__item anim anim--delay1 anim--up">
             <a href="baza-wiedzy.html">
                 <i class="num"></i>
