--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,12 +2,15 @@
 <body>
 
     <% include ./src/includes/top %>
+
+<div class="o-container">
     <% include ./src/includes/homeslider %>
     <% include ./src/includes/specbox %>
     <% include ./src/includes/latest %>
     <% include ./src/includes/more %>
     <% include ./src/includes/footer %>
-    
+</div>
+
 </body>
 </html>
 
