--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,7 @@
 @import 'objects/box';
 @import 'objects/btn';
 @import 'objects/cols';
+@import 'objects/container';
 @import 'objects/hamburger';
 @import 'objects/header';
 @import 'objects/icons';
@@ -54,3 +55,4 @@
 
 @import 'trumps/cf7';
 @import 'trumps/trumps';
+
